# api/openapi.yaml
@@ -7,7 +7,7 @@ servers:
 security:
 - http: []
 paths:
-  /update/{subdomain}:
+  /{subdomain}:
     post:
       operationId: updateip
       parameters:
@@ -36,6 +36,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/updateip_400_response'
           description: An error
+        "401":
+          $ref: '#/components/responses/AuthenticationException'
         "403":
           content:
             application/json:
@@ -47,7 +49,7 @@ paths:
       summary: update the ip address with the connecting ip address
       tags:
       - Subdomain
-  /update/{subdomain}/record:
+  /{subdomain}/record:
     post:
       operationId: update
       parameters:
@@ -76,6 +78,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/update_400_response'
           description: An error
+        "401":
+          $ref: '#/components/responses/AuthenticationException'
         "403":
           content:
             application/json:
@@ -101,6 +105,17 @@ components:
             required:
             - message
       description: Not found
+    AuthenticationException:
+      content:
+        application/json:
+          schema:
+            properties:
+              message:
+                description: Error overview.
+                type: string
+            required:
+            - message
+      description: Unauthenticated
     ValidationException:
       content:
         application/json:
